--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Show', field_level_project_path(@field, @level, @project) %> |
+<%= link_to 'Back', field_level_projects_path %>
