--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,9 +18,9 @@
         <td><%= project.level %></td>
         <td><%= project.content %></td>
         <td><%= project.level_id %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', field_level_project_path(@field, @level, project) %></td>
+        <td><%= link_to 'Edit', edit_field_level_project_path(@field, @level, project) %></td>
+        <td><%= link_to 'Destroy', field_level_project_path(@field, @level, project), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
+<%= link_to 'New Project', new_field_level_project_path %>
