--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,5 +15,5 @@
   <%= @project.level_id %>
 </p>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Edit', edit_field_level_project_path(@field, @level, @project) %> |
+<%= link_to 'Back', field_level_projects_path %>
