--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -5,15 +5,12 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Field</th>
-      <th>Height</th>
-      <th>Mintariff</th>
-      <th>Maxtariff</th>
-      <th>Name</th>
-      <th>Skill</th>
-      <th>Tool</th>
-      <th>Certificate</th>
-      <th>Field</th>
+      <th>Level</th>
+      <th>タリフ</th>
+      <th><%= @field.name %></th>
+      <th>代表的なスキル要件</th>
+      <th>代表的な言語、ツール</th>
+      <th>推奨資格</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,15 +18,12 @@
   <tbody>
     <% @levels.each do |level| %>
       <tr>
-        <td><%= level.field %></td>
         <td><%= level.height %></td>
-        <td><%= level.mintariff %></td>
-        <td><%= level.maxtariff %></td>
+        <td><%= level.mintariff %>～<%= level.maxtariff %>万円</td>
         <td><%= level.name %></td>
         <td><%= level.skill %></td>
         <td><%= level.tool %></td>
         <td><%= level.certificate %></td>
-        <td><%= level.field_id %></td>
         <td><%= link_to 'Show', field_level_path(@field, level) %></td>
         <td><%= link_to 'Edit', edit_field_level_path(@field, level) %></td>
         <td><%= link_to 'Destroy', field_level_path(@field, level), method: :delete, data: { confirm: 'Are you sure?' } %></td>
