--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -6,15 +6,14 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @fields.each do |field| %>
       <tr>
-        <td><%= field.name %></td>
-        <td><%= link_to 'Show', field %></td>
+        <td><%= link_to field.name, field_levels_path(field) %></td>
         <td><%= link_to 'Edit', edit_field_path(field) %></td>
         <td><%= link_to 'Destroy', field, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
