--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Levels</h1>
+<ul class="nav nav-tabs">
+  <% @fields.each do |field| %>
+    <li role="presentation" class="<%= 'active' if current_page?(field_levels_path(field)) %>"><%= link_to field.name, field_levels_path(field) %></li>
+  <% end %>
+</ul>
 
 <table class="table">
   <thead>
