--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,16 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :level_id %><br>
-    <%= f.text_field :level_id %>
+    <%= f.hidden_field :level_id %>
   </div>
   <div class="field">
     <%= f.label :content %><br>
     <%= f.text_area :content %>
-  </div>
-  <div class="field">
-    <%= f.label :level_id %><br>
-    <%= f.number_field :level_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
