--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= @field.name %><%= @level.name %>案件</h1>
+<h1><%= @field.name %><%= @level.levelname.name %>案件</h1>
 
 <%= link_to '新規案件', new_field_level_project_path %>
 <%= link_to 'マトリックスに戻る', field_levels_path %>
@@ -10,6 +10,7 @@
       <%= project.content %>
     </div>
     <div class="panel-footer">
+      <%= project.updated_at.strftime("%Y/%m/%d update") %>
       <%= link_to 'Edit', edit_field_level_project_path(@field, @level, project) %>
       <%= link_to 'Destroy', field_level_project_path(@field, @level, project), method: :delete, data: { confirm: 'Are you sure?' } %>
     </div>
