--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -25,9 +25,9 @@
         <td><%= level.levelname.name %></td>
         <td><%= level.mintariff %>～<%= level.maxtariff %>万円</td>
         <td><%= level.name %></td>
-        <td><%= level.skill %></td>
-        <td><%= level.tool %></td>
-        <td><%= level.certificate %></td>
+        <td><%= simple_format(h(level.skill)) %></td>
+        <td><%= simple_format(h(level.tool)) %></td>
+        <td><%= simple_format(h(level.certificate)) %></td>
         <td><%= link_to 'Show', field_level_projects_path(@field, level) %></td>
         <td><%= link_to 'Edit', edit_field_level_path(@field, level) %></td>
         <td><%= link_to 'Destroy', field_level_path(@field, level), method: :delete, data: { confirm: 'Are you sure?' } %></td>
