--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,7 +7,7 @@
 <% @projects.each do |project| %>
   <div class="panel panel-default">
     <div class="panel-body">
-      <%= project.content %>
+      <%= simple_format(h(project.content)) %>
     </div>
     <div class="panel-footer">
       <%= project.updated_at.strftime("%Y/%m/%d update") %>
