--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
   </div>
 </nav>
   <div class="container">
+    <p id="notice"><%= notice %></p>
     <%= yield %>
   </div class="container">
 </body>
