--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -13,9 +13,9 @@
 
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit '決定', class: 'btn btn-primary btn-block' %>
   </div>
 <% end %>
