--- a/app/views/fields/edit.html.erb
+++ b/app/views/fields/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Field</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', fields_path %>
+<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+  <h1>編集する</h1>
+  <%= render 'form' %>
+  <%= link_to '戻る', fields_path, class: 'btn btn-default btn-block' %>
+</div>
