--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -1,24 +1,22 @@
-<h1>分野設定</h1>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @fields.each do |field| %>
+<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+  <h1>分野</h1>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= link_to field.name, field_levels_path(field) %></td>
-        <td><%= link_to 'Edit', edit_field_path(field) %></td>
-        <td><%= link_to 'Destroy', field, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th colspan="2"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Field', new_field_path %>
+    </thead>
+    <tbody>
+      <% @fields.each do |field| %>
+        <tr>
+          <td><%= link_to field.name, field_levels_path(field) %></td>
+          <td><%= link_to '', edit_field_path(field) , class: "fa fa-pencil-square-o" %></td>
+          <td><%= link_to '', field, method: :delete, data: { confirm: '削除しますか？管理者に確認してください。' }, class: "fa fa-trash" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br>
+  <%= link_to '新しく作る', new_field_path, class: 'btn btn-default btn-block' %>
+</div>
