--- a/app/views/levelnames/_form.html.erb
+++ b/app/views/levelnames/_form.html.erb
@@ -13,13 +13,13 @@
 
   <div class="field">
     <%= f.label :code %><br>
-    <%= f.number_field :code %>
+    <%= f.number_field :code, class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit '決定', class: 'btn btn-primary btn-block' %>
   </div>
 <% end %>
