--- a/app/views/levelnames/new.html.erb
+++ b/app/views/levelnames/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Levelname</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', levelnames_path %>
+<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+　　<h1>新しく作る</h1>
+　　<%= render 'form' %>
+　　<%= link_to '戻る', levelnames_path, class: 'btn btn-default btn-block' %>
+</div>
