--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -1,21 +1,21 @@
-<p id="notice"><%= notice %></p>
-
 <ul class="nav nav-tabs">
   <% @fields.each do |field| %>
     <li role="presentation" class="<%= 'active' if current_page?(field_levels_path(field)) %>"><%= link_to field.name, field_levels_path(field) %></li>
   <% end %>
 </ul>
 
+<h1><%= @field.name %>マトリックス</h1>
+
 <table class="table">
   <thead>
     <tr>
       <th>Level</th>
       <th>タリフ</th>
-      <th><%= @field.name %></th>
-      <th>代表的なスキル要件</th>
-      <th>代表的な言語、ツール</th>
+      <th>ポジション</th>
+      <th>スキル要件</th>
+      <th>言語、ツール</th>
       <th>推奨資格</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -28,9 +28,12 @@
         <td><%= simple_format(h(level.skill)) %></td>
         <td><%= simple_format(h(level.tool)) %></td>
         <td><%= simple_format(h(level.certificate)) %></td>
-        <td><%= link_to 'Show', field_level_projects_path(@field, level) %></td>
-        <td><%= link_to 'Edit', edit_field_level_path(@field, level) %></td>
-        <td><%= link_to 'Destroy', field_level_path(@field, level), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to field_level_projects_path(@field, level) do %>
+            案件例（<%= level.projects.count %>件）
+          <% end %>
+        </td>
+        <td><%= link_to '', edit_field_level_path(@field, level), class: "fa fa-pencil-square-o" %> | <%= link_to '', field_level_path(@field, level), method: :delete, data: { confirm: '削除しますか？管理者に確認してください。' }, class: "fa fa-trash" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -38,4 +41,4 @@
 
 <br>
 
-<%= link_to 'New Level', new_field_level_path %>
+<%= link_to 'レベルを追加する', new_field_level_path, class: 'btn btn-default btn-block' %>
