--- a/app/views/levels/new.html.erb
+++ b/app/views/levels/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Level</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', field_levels_path %>
+<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+　　<h1>レベルを作る</h1>
+　　<%= render 'form' %>
+　　<%= link_to '戻る', field_levels_path, class: 'btn btn-default btn-block' %>
+</div>
