--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,18 +1,18 @@
-<p id="notice"><%= notice %></p>
-
-<h1><%= @field.name %><%= @level.levelname.name %>案件</h1>
-
-<%= link_to '新規案件', new_field_level_project_path %>
-<%= link_to 'マトリックスに戻る', field_levels_path %>
-<% @projects.each do |project| %>
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <%= simple_format(h(project.content)) %>
+<div class="col-md-10 col-md-offset-1">
+  <h1><%= @field.name %><%= @level.levelname.name %>案件</h1>
+  <%= link_to '案件を追加する', new_field_level_project_path, class: 'btn btn-default btn-block' %>
+  <%= link_to 'マトリックスに戻る', field_levels_path, class: 'btn btn-default btn-block' %>
+  </br>
+  <% @projects.each do |project| %>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <%= simple_format(h(project.content)) %>
+      </div>
+      <div class="panel-footer">
+        <%= project.updated_at.strftime("%Y/%m/%d update") %>
+         | <%= link_to '', edit_field_level_project_path(@field, @level, project), class: "fa fa-pencil-square-o" %> | 
+        <%= link_to '', field_level_project_path(@field, @level, project), method: :delete, data: { confirm: '削除しますか？管理者に確認してください。' }, class: "fa fa-trash" %>
+      </div>
     </div>
-    <div class="panel-footer">
-      <%= project.updated_at.strftime("%Y/%m/%d update") %>
-      <%= link_to 'Edit', edit_field_level_project_path(@field, @level, project) %>
-      <%= link_to 'Destroy', field_level_project_path(@field, @level, project), method: :delete, data: { confirm: 'Are you sure?' } %>
-    </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
