--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Project</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', field_level_projects_path %>
+<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+　　<h1>プロジェクト追加</h1>
+　　<%= render 'form' %>
+　　<%= link_to 'Back', field_level_projects_path, class: 'btn btn-default btn-block' %>
+</div>
