--- a/app/views/levels/_form.html.erb
+++ b/app/views/levels/_form.html.erb
@@ -28,15 +28,15 @@
   </div>
   <div class="field">
     <%= f.label :スキル要件 %><br>
-    <%= f.text_area :skill, class: 'form-control' %>
+    <%= f.text_area :skill, class: 'form-control', rows: 5 %>
   </div>
   <div class="field">
     <%= f.label :言語、ツール %><br>
-    <%= f.text_area :tool, class: 'form-control' %>
+    <%= f.text_area :tool, class: 'form-control', rows: 5 %>
   </div>
   <div class="field">
     <%= f.label :推奨資格 %><br>
-    <%= f.text_area :certificate, class: 'form-control' %>
+    <%= f.text_area :certificate, class: 'form-control', rows: 5 %>
   </div>
   <div class="actions">
     <%= f.submit '決定', class: 'btn btn-primary btn-block' %>
