--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="field">
     <%= f.label :content %><br>
-    <%= f.text_area :content, class: 'form-control' %>
+    <%= f.text_area :content, class: 'form-control', rows: 10 %>
   </div>
   <div class="actions">
     <%= f.submit '決定', class: 'btn btn-primary btn-block' %>
