delete password registoration from devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,14 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to '分野設定', fields_path %></li>
-        <li><%= link_to 'レベル設定', levelnames_path %></li>
+        <% if user_signed_in? %>
+          <li><%= current_user.email %></li>
+          <li><%= link_to '分野設定', fields_path %></li>
+          <li><%= link_to 'レベル設定', levelnames_path %></li>
+          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to 'ログイン', new_user_session_path  %></li>
+        <% end %>
       </ul>
     </div>
   </div>
