--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -15,7 +15,11 @@
           <th>スキル要件</th>
           <th>言語、ツール</th>
           <th>推奨資格</th>
-          <th colspan="2"></th>
+          <% if current_user.admin? %>
+            <th colspan="2"></th>
+          <% elsif current_user.member? %>
+            <th colspan="1"></th>
+          <% end %>
         </tr>
       </thead>
       <tbody>
@@ -32,12 +36,16 @@
                 案件例（<%= level.projects.count %>件）
               <% end %>
             </td>
-            <td><%= link_to '', edit_field_level_path(@field, level), class: "fa fa-pencil-square-o" %> | <%= link_to '', field_level_path(@field, level), method: :delete, data: { confirm: '削除しますか？管理者に確認してください。' }, class: "fa fa-trash" %></td>
+            <% if current_user.admin? %>
+              <td><%= link_to '', edit_field_level_path(@field, level), class: "fa fa-pencil-square-o" %> | <%= link_to '', field_level_path(@field, level), method: :delete, data: { confirm: '削除しますか？管理者に確認してください。' }, class: "fa fa-trash" %></td>
+            <% end %>
           </tr>
         <% end %>
       </tbody>
   </table>
   </div>
   <br>
-  <%= link_to 'レベルを追加する', new_field_level_path, class: 'btn btn-default btn-block' %>
+  <% if current_user.admin? %>
+    <%= link_to 'レベルを追加する', new_field_level_path, class: 'btn btn-default btn-block' %>
+  <% end %>
 </div>
