--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><a href="#"><%= current_user.email %>でログインしています</a></li>
-          <li><%= link_to '分野設定', fields_path %></li>
-          <li><%= link_to 'レベル設定', levelnames_path %></li>
+          <% if current_user.admin? %>
+            <li><a href="#">管理者でログイン中です</a></li>
+            <li><%= link_to '分野設定', fields_path %></li>
+            <li><%= link_to 'レベル設定', levelnames_path %></li>
+          <% end %>
           <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to 'ログイン', new_user_session_path  %></li>
