--- a/app/views/levels/_form.html.erb
+++ b/app/views/levels/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="field">
     <%= f.label :ポジション %><br>
-    <%= f.text_field :name, class: 'form-control' %>
+    <%= f.text_field :name, class: 'form-control', rows: 5 %>
   </div>
   <div class="field form-inline">
     <%= f.label :タリフ %><br>
