--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,11 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <% if current_user.sadmin? %>
-            <li><a href="#">超管理者でログイン中です</a></li>
+            <li><a>超管理者でログイン中です</a></li>
             <li><%= link_to '分野設定', fields_path %></li>
             <li><%= link_to 'レベル設定', levelnames_path %></li>
           <% elsif current_user.admin? %>
-            <li><a href="#">管理者でログイン中です</a></li>
+            <li><a>管理者でログイン中です</a></li>
           <% end %>
           <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
         <% else %>
