--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -4,7 +4,7 @@
     <thead>
       <tr>
         <th>Name</th>
-        <% if current_user.sadmin? %>
+        <% if current_user.admin? %>
           <th colspan="1"></th>
         <% end %>
       </tr>
@@ -13,7 +13,7 @@
       <% @fields.each do |field| %>
         <tr>
           <td><%= link_to field.name, field_levels_path(field) %></td>
-          <% if current_user.sadmin? %>
+          <% if current_user.admin? %>
             <td><%= link_to '', edit_field_path(field), class: "fa fa-pencil-square-o" %> | <%= link_to '', field, method: :delete, data: { confirm: '削除しますか？管理者に確認してください。' }, class: "fa fa-trash" %></td>
           <% end %>
         </tr>
@@ -21,7 +21,8 @@
     </tbody>
   </table>
   <br>
-  <% if current_user.sadmin? %>
+  <% if current_user.admin? %>
     <%= link_to '新しく作る', new_field_path, class: 'btn btn-default btn-block' %>
+    <%= link_to 'レベル設定', levelnames_path, class: 'btn btn-default btn-block' %>
   <% end %>
 </div>
