--- a/app/views/levelnames/index.html.erb
+++ b/app/views/levelnames/index.html.erb
@@ -20,4 +20,5 @@
   </table>
   <br>
   <%= link_to '新しく作る', new_levelname_path, class: 'btn btn-default btn-block' %>
+  <%= link_to '分野設定', fields_path, class: 'btn btn-default btn-block' %>
 </div>
